2009-08-10  Jan Urbanski  <jurbanski@flumotion.com>

	patch by: Murray Cumming  <murrayc@openismus.com>

	* data/glade/debug-marker.glade:
	* data/glade/encoding-wizard.glade:
	* data/glade/ondemand-wizard.glade:
	* data/glade/overlay-wizard.glade:
	* data/glade/welcome-wizard.glade:
	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/greeter.py:
	* flumotion/component/encoders/smoke/smoke.py:
	* flumotion/component/muxers/checks.py:
	* flumotion/component/producers/checks.py:
	* flumotion/component/producers/soundcard/wizard_gtk.py:
	* flumotion/component/producers/videotest/videotest.xml:
	* flumotion/scenario/steps/httpstreamersteps.py:
	* flumotion/ui/fileselector.py:
	* flumotion/worker/checks/audio.py:
	* flumotion/worker/checks/gst010.py:
	Minor improvements to user-visible strings after a review at the
	request of Thomas Vander Stichele.

2009-08-05  Guillaume Quintard  <guillaume.quintard@gmail.com>

	* po/fr.po:
	Last batch of translations, 11  left.

2009-08-05  Guillaume Quintard  <guillaume.quintard@gmail.com>

	* po/fr.po:
	Untranslated strings now down to less than 100 (doesn't mean the
	translated ones are all good, but it's an enhancement).

2009-08-04  Guillaume Quintard  <guillaume.quintard@gmail.com>

	* flumotion/test/test_component_providers.py:
	Changes from assertIsInstance() to failUnless(isinstance())
	for compatibility with the buildbot.

2009-08-04  Guillaume Quintard  <guillaume.quintard@gmail.com>

	reviewed by: xmartinez

	* flumotion/component/misc/httpserver/cachedprovider.py:
	* flumotion/component/misc/httpserver/localpath.py:
	LocalPaths now won't check if the file exist before returning a child as
	the verification is done in the open()
	* flumotion/component/misc/httpserver/localprovider.py:
	For the three previous file, added a reference to the new test suite
	module
	* flumotion/test/test_component_providers.py:
	* flumotion/test/test_component_providers.py (added):